Simplify student description in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section>
       <h1>Jose Luis</h1>
-      <p>Estudiante de Informática. Interés en desarrollo web y ciberseguridad.</p>
+      <p>Estudiante de Informática.</p>
     </section>
 
     <section id="proyectos">
