Mejorar el estilo y la estructura del HTML y CSS, añadiendo clases y ajustando propiedades para una mejor presentación.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="site-header">
       <nav>
         <a href="#proyectos">Proyectos</a>
         <a href="#sobre-mi">Sobre mí</a>
@@ -15,11 +15,11 @@
       </nav>
     </header>
 
-  <main>
-    <section>
-      <h1>Jose Luis</h1>
-      <p>Estudiante de Informática.</p>
-    </section>
+    <main>
+      <section>
+        <h1>Jose Luis</h1>
+        <p>Estudiante de Informática.</p>
+      </section>
 
       <section id="proyectos">
         <h2>Proyectos</h2>
