--- a/index.html
+++ b/index.html
@@ -16,15 +16,36 @@
     </header>
 
     <main>
-      <section>
-        <h1>Jose Luis</h1>
-        <p>Estudiante de Informática.</p>
+      <section id="presentacion">
+        <h2>Hola, soy Jose Luis</h2>
+        <p><strong>Ahora:</strong> Desarrollo web (HTML, CSS, JavaScript) con enfoque en calidad y fundamentos de seguridad en aplicaciones web.</p>
+        <p><strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño 3D.</p>
+        <p><strong>Puente:</strong> Trabajo con mentalidad de requisitos, documentación y mejora continua para construir soluciones claras y mantenibles.</p>
       </section>
+
 
       <section id="proyectos">
         <h2>Proyectos</h2>
         <div class="projects">
           <!-- cards aquí -->
+           <div class="project-card">
+            <h3>Proyecto 1</h3>
+            <p>Descripción breve del proyecto 1.</p>
+            <a href="#">Ver más</a>
+          </div>
+
+          <div class="project-card">
+            <h3>Proyecto 2</h3>
+            <p>Descripción breve del proyecto 2.</p>
+            <a href="#">Ver más</a>
+          </div>
+
+          <div class="project-card">
+            <h3>Proyecto 3</h3>
+            <p>Descripción breve del proyecto 3.</p>
+            <a href="#">Ver más</a>
+          </div>
+
         </div>
       </section>
 
