Mejorar el comportamiento del encabezado al hacer scroll, añadiendo efectos de ocultación y visibilidad, y actualizar el estilo del HTML y CSS para una mejor presentación.

--- a/index.html
+++ b/index.html
@@ -8,27 +8,38 @@
   </head>
   <body>
     <header class="site-header">
-      <nav>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#sobre-mi">Sobre mí</a>
-        <a href="#contacto">Contacto</a>
-      </nav>
+      <div class="header-inner">
+        <nav>
+          <a href="#proyectos">Proyectos</a>
+          <a href="#sobre-mi">Sobre mí</a>
+          <a href="#contacto">Contacto</a>
+        </nav>
+      </div>
     </header>
 
     <main>
       <section id="presentacion">
-        <h2>Hola, soy Jose Luis</h2>
-        <p><strong>Ahora:</strong> Desarrollo web (HTML, CSS, JavaScript) con enfoque en calidad y fundamentos de seguridad en aplicaciones web.</p>
-        <p><strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño 3D.</p>
-        <p><strong>Puente:</strong> Trabajo con mentalidad de requisitos, documentación y mejora continua para construir soluciones claras y mantenibles.</p>
+        <h1>Jose Luis</h1>
+        <p>
+          <strong>Ahora:</strong> Desarrollo web (HTML, CSS, JavaScript) con
+          enfoque en calidad y fundamentos de seguridad en aplicaciones web.
+        </p>
+        <p>
+          <strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño
+          3D.
+        </p>
+        <p>
+          <strong>Puente:</strong> Trabajo con mentalidad de requisitos,
+          documentación y mejora continua para construir soluciones claras y
+          mantenibles.
+        </p>
       </section>
-
 
       <section id="proyectos">
         <h2>Proyectos</h2>
         <div class="projects">
           <!-- cards aquí -->
-           <div class="project-card">
+          <div class="project-card">
             <h3>Proyecto 1</h3>
             <p>Descripción breve del proyecto 1.</p>
             <a href="#">Ver más</a>
@@ -45,7 +56,6 @@
             <p>Descripción breve del proyecto 3.</p>
             <a href="#">Ver más</a>
           </div>
-
         </div>
       </section>
 
