Añadir soporte para enlaces de salto y mejorar la gestión del desplazamiento del encabezado, ajustando estilos y propiedades CSS para una mejor interactividad y presentación.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <a class="skip-link" href="#presentacion">Saltar al contenido</a>
+
     <header class="site-header">
       <div class="header-inner">
         <nav>
