Enhance dark mode support and improve layout styles
- Added dark mode color variables for background, text, and borders.
- Updated body styles to use new color variables for background and text.
- Adjusted header background and box-shadow for better visibility.
- Modified navigation link hover effects for improved accessibility.
- Enhanced section padding and added max-width for paragraphs and lists.
- Introduced new styles for project cards, including hover effects and layout adjustments.
- Added a brand logo to the navigation for better branding.
- Updated content in the "presentacion" and "sobre-mi" sections for clarity and engagement.
- Added new logo images to the assets folder.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <header class="site-header">
       <div class="header-inner">
         <nav>
+          <a class="brand" href="#presentacion">
+            <img
+              src="assets/logo-jl.webp"
+              srcset="assets/logo-jl-199w.webp 199w, assets/logo-jl.webp 398w"
+              sizes="28px"
+              alt="JL"
+              width="28"
+              height="28"
+            />
+          </a>
+
           <a href="#proyectos">Proyectos</a>
           <a href="#sobre-mi">Sobre mí</a>
           <a href="#contacto">Contacto</a>
@@ -22,19 +33,8 @@
     <main>
       <section id="presentacion">
         <h1>Jose Luis</h1>
-        <p>
-          <strong>Ahora:</strong> Desarrollo web (HTML, CSS, JavaScript) con
-          enfoque en calidad y fundamentos de seguridad en aplicaciones web.
-        </p>
-        <p>
-          <strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño
-          3D.
-        </p>
-        <p>
-          <strong>Puente:</strong> Trabajo con mentalidad de requisitos,
-          documentación y mejora continua para construir soluciones claras y
-          mantenibles.
-        </p>
+        <p>socjoseluis</p>
+        <a href="#sobre-mi">Más sobre mí</a>
       </section>
 
       <section id="proyectos">
@@ -63,7 +63,16 @@
 
       <section id="sobre-mi">
         <h2>Sobre mí</h2>
-        <p><!-- texto breve --></p>
+        <p>
+          <strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño
+          3D.
+        </p>
+
+        <p>
+          <strong>Puente:</strong> Trabajo con mentalidad de requisitos,
+          documentación y mejora continua para construir soluciones claras y
+          mantenibles.
+        </p>
       </section>
 
       <section id="contacto">
