Actualizar rutas de imagen del logo en el encabezado para mejorar la organización de archivos

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <nav>
           <a class="brand" href="#presentacion">
             <img
-              src="assets/logo-jl.webp"
-              srcset="assets/logo-jl-199w.webp 199w, assets/logo-jl.webp 398w"
+              src="assets/img/logo-jl.webp"
+              srcset="
+                assets/img/logo-jl-199w.webp 199w,
+                assets/img/logo-jl.webp      398w
+              "
               sizes="28px"
               alt="JL"
               width="28"
