Actualizar el tamaño del logo en el encabezado y añadir enlaces a GitHub y LinkedIn en la sección de contacto.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 
     <header class="site-header">
       <div class="header-inner">
-        <nav>
-          <a class="brand" href="#presentacion">
-            <img
-              src="assets/img/logo-jl.webp"
-              srcset="
-                assets/img/logo-jl-199w.webp 199w,
-                assets/img/logo-jl.webp      398w
-              "
-              sizes="28px"
-              alt="JL"
-              width="28"
-              height="28"
-            />
-          </a>
-
+        <a class="brand" href="#presentacion">
+          <img
+            src="assets/img/logo-jl.webp"
+            srcset="
+              assets/img/logo-jl-199w.webp 199w,
+              assets/img/logo-jl.webp      398w
+            "
+            sizes="38px"
+            alt="JL"
+            width="38"
+            height="38"
+          />
+        </a>
+        <nav aria-label="Navegación principal">
           <a href="#proyectos">Proyectos</a>
           <a href="#sobre-mi">Sobre mí</a>
           <a href="#contacto">Contacto</a>
@@ -81,8 +80,23 @@
       <section id="contacto">
         <h2>Contacto</h2>
         <ul>
-          <li><a href="#">GitHub</a></li>
-          <li><a href="#">LinkedIn</a></li>
+          <li>
+            <a
+              href="https://github.com/socjoseluis"
+              target="_blank"
+              rel="noopener noreferrer"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/socjoseluis/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+          </li>
+
           <li><a href="mailto:cv@socjoseluis.com">cv@socjoseluis.com</a></li>
         </ul>
       </section>
