Añadir descripción profesional en la sección de presentación y ajustar estilos para mejorar la presentación visual.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <section id="presentacion">
         <h1>Jose Luis</h1>
         <p>socjoseluis</p>
+        <p>Desarrollador web enfocado en calidad, accesibilidad y fundamentos de seguridad.</p>
+
         <a href="#sobre-mi">Más sobre mí</a>
       </section>
 
