Actualizar la hoja de estilos para incluir un parámetro de versión en la ruta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio | Jose Luis</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=1" />
   </head>
   <body>
     <a class="skip-link" href="#presentacion">Saltar al contenido</a>
