Agregar archivos de configuración para el despliegue de páginas y crear bloques de encabezado y pie de página dinámicos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a class="skip-link" href="#presentacion">Saltar al contenido</a>
-
+    <!-- BUILD:HEADER -->
     <header class="site-header">
       <div class="header-inner">
         <a class="brand" href="#presentacion">
@@ -31,7 +31,7 @@
         </nav>
       </div>
     </header>
-
+    <!-- /BUILD:HEADER -->
     <main>
       <section id="presentacion">
         <h1>Jose Luis</h1>
@@ -56,7 +56,6 @@
             <div class="project-actions">
               <a href="#">Detalles</a>
             </div>
-
           </div>
 
           <div class="project-card">
@@ -121,11 +120,15 @@
         </ul>
       </section>
     </main>
+
+    <!-- BUILD:FOOTER -->
     <footer class="site-footer">
-      <p>© <span id="year"></span> Jose Luis · <a href="mailto:cv@socjoseluis.com">cv@socjoseluis.com</a></p>
-
+      <p>
+        © <span id="year"></span> Jose Luis ·
+        <a href="mailto:cv@socjoseluis.com">cv@socjoseluis.com</a>
+      </p>
     </footer>
-
+    <!-- /BUILD:FOOTER -->
 
     <script src="js/main.js"></script>
   </body>
