Refactor build.js y actualizar estilos: mejorar la estructura del código y agregar estilos para el encabezado y pie de página.

--- a/index.html
+++ b/index.html
@@ -10,28 +10,7 @@
   <body>
     <a class="skip-link" href="#presentacion">Saltar al contenido</a>
     <!-- BUILD:HEADER -->
-    <header class="site-header">
-      <div class="header-inner">
-        <a class="brand" href="#presentacion">
-          <img
-            src="assets/img/logo-jl.webp"
-            srcset="
-              assets/img/logo-jl-199w.webp 199w,
-              assets/img/logo-jl.webp      398w
-            "
-            sizes="38px"
-            alt="JL"
-            width="38"
-            height="38"
-          />
-        </a>
-        <nav aria-label="Navegación principal">
-          <a href="#proyectos">Proyectos</a>
-          <a href="#sobre-mi">Sobre mí</a>
-          <a href="#contacto">Contacto</a>
-        </nav>
-      </div>
-    </header>
+    <!-- Fuente: partials/header.html -->
     <!-- /BUILD:HEADER -->
     <main>
       <section id="presentacion">
@@ -123,12 +102,7 @@
     </main>
 
     <!-- BUILD:FOOTER -->
-    <footer class="site-footer">
-      <p>
-        © <span id="year"></span> Jose Luis ·
-        <a href="mailto:cv@socjoseluis.com">cv@socjoseluis.com</a>
-      </p>
-    </footer>
+    <!-- Fuente: partials/footer.html -->
     <!-- /BUILD:FOOTER -->
 
     <script src="js/main.js"></script>
