Agregar archivos de configuración y componentes: implementar encabezado y navegación dinámicos, y establecer estilos para el pie de página y tarjetas de proyecto.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
     <!-- Fuente: partials/footer.html -->
     <!-- /BUILD:FOOTER -->
 
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
