--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio | Jose Luis</title>
     <link rel="stylesheet" href="css/style.css" />
-
   </head>
   <body>
     <a class="skip-link" href="#presentacion">Saltar al contenido</a>
@@ -66,12 +65,45 @@
           <strong>Antes:</strong> Ingeniería mecánica y consultoría de diseño
           3D.
         </p>
+        <p>
+          <strong>Ahora:</strong> Estoy construyendo mi perfil en desarrollo
+          web, con foco en calidad, accesibilidad y fundamentos de seguridad en
+          aplicaciones web.
+        </p>
 
         <p>
           <strong>Puente:</strong> Trabajo con mentalidad de requisitos,
           documentación y mejora continua para construir soluciones claras y
           mantenibles.
         </p>
+      </section>
+
+      <section id="skills" aria-labelledby="skills-title">
+        <h2 id="skills-title">Habilidades</h2>
+
+        <h3>Frontend</h3>
+        <ul class="chips">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Responsive</li>
+          <li>Accesibilidad</li>
+        </ul>
+
+        <h3>Seguridad e infraestructura</h3>
+        <ul class="chips">
+          <li>Fundamentos AppSec</li>
+          <li>Redes</li>
+          <li>Linux</li>
+          <li>Buenas prácticas</li>
+        </ul>
+
+        <h3>Herramientas</h3>
+        <ul class="chips">
+          <li>Git/GitHub</li>
+          <li>VS Code</li>
+          <li>Documentación</li>
+        </ul>
       </section>
 
       <section id="contacto">
